--- a/n.css
+++ b/n.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url('YOUR NAME2.jpg'); 
+  background-image: url("YOUR NAME2.jpg"); 
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
