--- a/Random/style.css
+++ b/Random/style.css
@@ -1,7 +1,7 @@
 /* styles.css */
 body {
     font-family: 'Arial', sans-serif;
-    background: url('https://n4sshh.github.io/Nasshh/mongoloid.jpg') no-repeat center center fixed;
+    background: url('https://n4sshh.github.io/Nasshh/Nash%20abs.jpg') no-repeat center center fixed;
     background-size: cover;
     backdrop-filter: blur(5px); /* Add a blur effect to the background */
     color: white;
