--- a/Random/style.css
+++ b/Random/style.css
@@ -4,6 +4,7 @@ body {
     background: url('https://n4sshh.github.io/Nasshh/Nash%20abs.jpg') no-repeat center center fixed;
     background-size: cover;
     backdrop-filter: blur(5px); /* Add a blur effect to the background */
+    background-size: 100vw 100vh; /* Ensures the image covers the full width and height */
     color: white;
     text-align: center;
     margin: 0;
